# pretzel

./: CMakeLists.txt  README.md
cmake/: FindLibav.cmake
src/: annotator.cpp  converter.cpp  exporter.cpp  player.cpp  simulator.cpp
src/lib/: annotations.cpp  annotations.h  camera.cpp  camera.h  projections.cpp  projections.h  time.cpp  time.h  tracker.cpp  tracker.h
src/seek/: test.cpp  video_reader.cpp  video_reader.h  video_reader_p.h
toolkit/: README.md  experiment_cameramotion.m  experiment_cameramotion_visualize.m  sequence_create_pretzel.m  stack_amp.m
toolkit/camera/: camera_create.m  camera_move.m  camera_project.m  camera_recenter.m  camera_rescale.m  camera_rotate.m  camera_unproject.m  euler2matrix.m  is_visible.m  look_at.m  matrix2euler.m  sensor2sphere.m  space2sphere.m  sphere2space.m  truncate_angle.m
